--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       interval: "1s"
       retries: 20
   simulator:
-    image: devrt/simulator-empty
+    image: devrt/simulator-turtlesim
     ipc: host
     security_opt:
     - seccomp:unconfined
@@ -23,9 +23,11 @@ services:
     depends_on:
     - xserver
   workspace:
+    #    image: devrt/ros-devcontainer-vscode:melodic-desktop
+    image: okdhryk/ros-devcontainer-vscode:melodic-desktop
     # env_file:
     #   - .env
-    image: devrt/ros-devcontainer-vscode:melodic-desktop
+
     ipc: host
     security_opt:
     - seccomp:unconfined
